GNOME Bugzilla – Bug 730691
Fix invalid GEnumValue.value_name entries
Last modified: 2014-09-23 09:16:40 UTC
Created attachment 277121 [details] [review] patch From 96a95aed7cbedd678fc40ae7965bb7a370e11eea Mon Sep 17 00:00:00 2001 From: Christoph Reiter <reiter.christoph@gmail.com> Date: Sat, 24 May 2014 19:16:12 +0200 Subject: [PATCH] Fix invalid GEnumValue.value_name entries. This makes the enum entries in the gir have valid c:identifiers and documentation.
I agree this is an abuse of the value_name field but it was pretty useful to be able to proide a documentation to be used at runtime. In pitivi for example we do expose that directly in the UI I believe so it would be kind of an API breakage to change that. I am not sure how we should move forward, do you have any idea?
No idea. I see that pitivi has translations, so maybe it makes sense to move the enum -> description mapping to pitivi anyway.