Fix invalid GEnumValue.value_name entries.

This makes the enum entries in the gir have valid c:identifiers and documentation.

https://bugzilla.gnome.org/show_bug.cgi?id=730691